Refactor product management: add product code field to product forms and details, enhance error handling in product deletion, and update related services and repositories to support product code functionality.